@@ -1,3 +1,11 @@
+2009-01-24  Claudio Saavedra  <csaavedra@igalia.com>
+
+	Bug 559420 – gtk_icon_view_enable_model_drag_[source|dest] docs
+	wrt. reorderable property
+
+	* gtk/gtkiconview.c: Improve docstrings regarding reorderable
+        property. Based on a patch by Björn Lindqvist.
+
 2009-01-24  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtktoolbutton.c (gtk_tool_button_activatable_reset):
